[gd_scene load_steps=4 format=3 uid="uid://bw5tke1cas85i"]

[ext_resource type="Texture2D" uid="uid://ddvwg2gld8k4s" path="res://storefront/website/computer.png" id="1_awbqa"]
[ext_resource type="Script" path="res://storefront/website/computer.gd" id="2_luv6h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_awbqa"]
size = Vector2(72, 104)

[node name="Computer" type="Sprite2D"]
z_index = 1
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_awbqa")
script = ExtResource("2_luv6h")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, 42)
shape = SubResource("RectangleShape2D_awbqa")

[node name="PressKey" type="Label" parent="."]
visible = false
offset_left = -88.0
offset_top = -128.0
offset_right = 115.0
offset_bottom = -61.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "PRESS 'E'"

[connection signal="body_entered" from="Area2D" to="." method="_on_computer_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_computer_body_exited"]
